--- a/css/sass/plugins/_plugin-flexslider.scss
+++ b/css/sass/plugins/_plugin-flexslider.scss
@@ -36,6 +36,11 @@
 	a:hover, a:focus {
 		background-color: rgba(255,255,255,1.0);
 	}
+	
+	@media (max-width: $screen-sm - 1) {
+	    bottom: 40px;
+	    right: 10px;
+	}
 }
 
 .flex-prev {
