--- a/css/editor-style.css
+++ b/css/editor-style.css
@@ -2114,6 +2114,7 @@ h3, h4, h5, h6 { -moz-hyphens: auto; -o-hyphens: auto; -webkit-hyphens: auto; -m
 
 h1 { font-size: 32px; line-height: 44.8px; font-size: 2rem; line-height: 2.8rem; }
 .sidebar-inline + h1 { margin-top: 0; }
+#logo h1 { font-size: 24px; line-height: 33.6px; font-size: 1.5rem; line-height: 2.1rem; }
 
 h2 { font-size: 24px; line-height: 33.6px; font-size: 1.5rem; line-height: 2.1rem; margin: 0; padding: 22px 0; }
 .sidebar-outline h2, .widget h2 { padding-bottom: 11px; }
