--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -163,6 +163,7 @@ $font-size-hero-slider-text:	18;
 $font-size-hero-slider-copyright: 14;
 $font-size-textbuttons:		14;
 $font-size-linkicon:		13;
+$font-size-hero-links:		13;
 
 $font-size-content-linkicon:	10;
 $font-size-content-listitem:	15;
