--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -224,6 +224,7 @@ $break-2200:	2200px;
 
 $screen-xl:	1400px;
 $screen-xxl:	1700px;
+$screen-xxs:	320px;
 
 $wordpress-adminbar-break:	    783px;
 // WordPress Adminbar breaks to small
