--- a/css/sass/elements/_devider.scss
+++ b/css/sass/elements/_devider.scss
@@ -1,10 +1,80 @@
 /*-----------------------------------------------------------------------------------*/
 /* Devider
 /*-----------------------------------------------------------------------------------*/
+/* 
+gradient style
+
+hr {
+    position: relative;
+    clear: both;
+    display: none;
+    border: none;
+    
+    @media (min-width: $screen-xs) {
+	    display: block;
+    }
+    height: 1px;
+    margin: 10px 0 30px;
+	
+    @media (min-width: $screen-sm) {
+        margin: 0 0 40px 0;
+    }
+    @include linear-gradient-three(transparent 0%,$colorText 50%,transparent 100%);
+    
+    &.big,
+    .page-template-page-start &,
+    .home & {
+	    margin: 0 0 60px 0;
+    } 
+} 
+*/
 
 hr {
 	position: relative;
-	z-index: 10;
+	clear: both;
+	background: #fff;
+	border: none;
+	outline: none;
+	display: none;
+	@media (min-width: $screen-xs) {
+	    display: block;
+	}
+
+	height: 40px;
+	margin: 10px 10px 30px;
+	
+	@media (min-width: $screen-sm) {
+	    margin: 10px 50px 30px;
+	    height: 20px;	    
+	}
+	
+	&.big,
+	.page-template-page-start &,
+	.home & {
+	    height: 60px;
+	    margin-bottom: 60px
+	}
+	@include box-shadow(0 10px 10px -10px $colorStandardHellgrau inset);
+	
+	&.line {
+	    height: 1px;
+	    @include linear-gradient-three(transparent 0%,$colorText 50%,transparent 100%);  
+	}
+	&.line.big {
+	     margin-bottom: 60px
+	}
+}
+.page-template-page-start hr::after,
+.home hr::after {
+    top: 30px;
+    @include box-shadow(0 0 30px $colorStandardHellgrau);
+}
+
+/* Old hack, works only in ff, ie, opera 
+
+hr {
+	position: relative;
+	 z-index: 10;
 	clear: both;
 	background: #fff;
 	border: none;
@@ -60,3 +130,4 @@ hr {
 }
 
 
+*/
