--- a/css/sass/mixins/_mixins.scss
+++ b/css/sass/mixins/_mixins.scss
@@ -53,7 +53,31 @@ Mixins File for Wordpress Theme FAU
     background-image: -o-linear-gradient(left, $fromColor, $toColor); /* Opera 11.10+ */
     background-image: linear-gradient(left, $fromColor, $toColor);
 }
-
+@mixin linear-top-gradient($fromColor, $toColor) {
+    background-color: $fromColor; /* Fallback Color */
+    background-image: -webkit-gradient(linear, top, bottom from($fromColor), to($toColor)); /* Saf4+, Chrome */
+    background-image: -webkit-linear-gradient(top, $fromColor, $toColor); /* Chrome 10+, Saf5.1+, iOS 5+ */
+    background-image: -moz-linear-gradient(top, $fromColor, $toColor); /* FF3.6 */
+    background-image: -ms-linear-gradient(top, $fromColor, $toColor); /* IE10 */
+    background-image: -o-linear-gradient(top, $fromColor, $toColor); /* Opera 11.10+ */
+    background-image: linear-gradient(top, $fromColor, $toColor);
+}
+@mixin linear-gradient-three($fromColor, $toColor, $nextColor) {
+    background-color: $fromColor; /* Fallback Color */
+    background-image: -webkit-linear-gradient(left, $fromColor, $toColor, $nextColor); /* Chrome 10+, Saf5.1+, iOS 5+ */
+    background-image: -moz-linear-gradient(left, $fromColor, $toColor, $nextColor); /* FF3.6 */
+    background-image: -ms-linear-gradient(left, $fromColor, $toColor,$nextColor); /* IE10 */
+    background-image: -o-linear-gradient(left, $fromColor, $toColor,$nextColor); /* Opera 11.10+ */
+    background-image: linear-gradient(left, $fromColor, $toColor,$nextColor);
+}
+@mixin linear-top-gradient-three($fromColor, $toColor, $nextColor) {
+    background-color: $fromColor; /* Fallback Color */
+    background-image: -webkit-linear-gradient(top, $fromColor, $toColor, $nextColor); /* Chrome 10+, Saf5.1+, iOS 5+ */
+    background-image: -moz-linear-gradient(top, $fromColor, $toColor, $nextColor); /* FF3.6 */
+    background-image: -ms-linear-gradient(top, $fromColor, $toColor,$nextColor); /* IE10 */
+    background-image: -o-linear-gradient(top, $fromColor, $toColor,$nextColor); /* Opera 11.10+ */
+    background-image: linear-gradient(top, $fromColor, $toColor,$nextColor);
+}
 
 @mixin radial-gradient($color2, $color1) {
     background: $color2;
