--- a/css/editor-style.css
+++ b/css/editor-style.css
@@ -2306,15 +2306,83 @@ cite { color: #0059b3; font-weight: normal; }
 /*-----------------------------------------------------------------------------------*/
 /* Devider
 /*-----------------------------------------------------------------------------------*/
-hr { position: relative; z-index: 10; clear: both; background: #fff; border: none; outline: none; display: none; height: 40px; margin: 10px 0 30px; }
+/* 
+gradient style
+
+hr { position: relative; clear: both; display: none; border: none;  @media (min-width: $screen-xs) {
+	    display: block; } height: 1px; margin: 10px 0 30px;
+	 @media (min-width: $screen-sm) { margin: 0 0 40px 0; } @include linear-gradient-three(transparent 0%,$colorText 50%,transparent 100%);  &.big, .page-template-page-start &, .home & {
+	    margin: 0 0 60px 0; } 
+} 
+*/
+hr { position: relative; clear: both; background: #fff; border: none; outline: none; display: none; height: 40px; margin: 10px 10px 30px; -webkit-box-shadow: 0 10px 10px -10px #e9edf2 inset; -moz-box-shadow: 0 10px 10px -10px #e9edf2 inset; box-shadow: 0 10px 10px -10px #e9edf2 inset; }
 @media (min-width: 480px) { hr { display: block; } }
-@media (min-width: 768px) { hr { margin: 0 0 40px 0; height: 20px; } }
-hr.big, .page-template-page-start hr, .home hr { height: 60px; margin: 0 0 60px 0; }
-hr::after { content: ""; position: absolute; top: 10px; bottom: 0; left: 50px; right: 50px; z-index: 9; -webkit-box-shadow: 0 0 10px #e9edf2; -moz-box-shadow: 0 0 10px #e9edf2; box-shadow: 0 0 10px #e9edf2; -webkit-border-radius: 10; -moz-border-radius: 10; border-radius: 10; background-clip: padding-box; }
-hr::before { content: ""; position: absolute; background: #fff; top: 0; left: 0; right: 0; bottom: 0; z-index: 11; }
+@media (min-width: 768px) { hr { margin: 10px 50px 30px; height: 20px; } }
+hr.big, .page-template-page-start hr, .home hr { height: 60px; margin-bottom: 60px; }
+hr.line { height: 1px; background-color: transparent 0%; /* Fallback Color */ background-image: -webkit-linear-gradient(left, transparent 0%, #444 50%, transparent 100%); /* Chrome 10+, Saf5.1+, iOS 5+ */ background-image: -moz-linear-gradient(left, transparent 0%, #444 50%, transparent 100%); /* FF3.6 */ background-image: -ms-linear-gradient(left, transparent 0%, #444 50%, transparent 100%); /* IE10 */ background-image: -o-linear-gradient(left, transparent 0%, #444 50%, transparent 100%); /* Opera 11.10+ */ background-image: linear-gradient(left, transparent 0%, #444 50%, transparent 100%); }
+hr.line.big { margin-bottom: 60px; }
 
 .page-template-page-start hr::after, .home hr::after { top: 30px; -webkit-box-shadow: 0 0 30px #e9edf2; -moz-box-shadow: 0 0 30px #e9edf2; box-shadow: 0 0 30px #e9edf2; }
 
+/* Old hack, works only in ff, ie, opera 
+
+hr {
+	position: relative;
+	 z-index: 10;
+	clear: both;
+	background: #fff;
+	border: none;
+	outline: none;
+	display: none;
+	
+	@media (min-width: $screen-xs) {
+	    display: block;
+	}
+
+	height: 40px;
+	margin: 10px 0 30px;
+	
+	@media (min-width: $screen-sm) {
+	    margin: 0 0 40px 0;
+	    height: 20px;	    
+	}
+	
+	&.big,
+	.page-template-page-start &,
+	.home & {
+	    height: 60px;
+	    margin: 0 0 60px 0;
+	}
+	
+	&::after {
+	    content: "";
+	    position: absolute; 
+	    top: 10px;
+	    bottom: 0;
+	    left: 50px;
+	    right: 50px;
+	    z-index: 9;
+	    @include box-shadow(0 0 10px $colorStandardHellgrau);
+	    @include border-radius(100px / 10px);
+
+	}
+	&::before {
+	    content: "";
+	    position: absolute;
+	    background: #fff;
+	    top: 0; 
+	    left: 0;
+	    right: 0;
+	    bottom: 0;
+	    z-index: 11;
+	}
+}
+.page-template-page-start hr::after,
+.home hr::after { top: 30px; @include box-shadow(0 0 30px $colorStandardHellgrau);
+}
+
+
+*/
 /*-----------------------------------------------------------------------------------*/
 /* Images
 /*-----------------------------------------------------------------------------------*/
