--- a/css/sass/elements/_devider.scss
+++ b/css/sass/elements/_devider.scss
@@ -1,34 +1,6 @@
 /*-----------------------------------------------------------------------------------*/
 /* Devider
 /*-----------------------------------------------------------------------------------*/
-/* 
-gradient style
-
-hr {
-    position: relative;
-    clear: both;
-    display: none;
-    border: none;
-    
-    @media (min-width: $screen-xs) {
-	    display: block;
-    }
-    height: 1px;
-    margin: 10px 0 30px;
-	
-    @media (min-width: $screen-sm) {
-        margin: 0 0 40px 0;
-    }
-    @include linear-gradient-three(transparent 0%,$colorText 50%,transparent 100%);
-    
-    &.big,
-    .page-template-page-start &,
-    .home & {
-	    margin: 0 0 60px 0;
-    } 
-} 
-*/
-
 hr {
 	position: relative;
 	clear: both;
@@ -36,17 +8,15 @@ hr {
 	border: none;
 	outline: none;
 	display: none;
-	@media (min-width: $screen-xs) {
+	@media (min-width: $screen-xxs) {
 	    display: block;
+	    margin: 10px 50px 30px;
+	    height: 20px;	
 	}
 
 	height: 40px;
 	margin: 10px 10px 30px;
 	
-	@media (min-width: $screen-sm) {
-	    margin: 10px 50px 30px;
-	    height: 20px;	    
-	}
 	
 	&.big,
 	.page-template-page-start &,
@@ -58,7 +28,7 @@ hr {
 	
 	&.line {
 	    height: 1px;
-	    @include linear-gradient-three(transparent 0%,$colorText 50%,transparent 100%);  
+	    @include linear-gradient-three(transparent 0%,$colorStandardHellgrau 50%,transparent 100%);  
 	}
 	&.line.big {
 	     margin-bottom: 60px
